# pico-midi-blaster

./: .gitmodules  CMakeLists.txt  README.md
examples/: EXAMPLES.md  scale.hex  scale.mid
src/: config.h  hw_config.c  main.c  midi.c  midi.h  music.h
